<resources>
    <string name="app_name">Foody Recipes</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="recipes">Recipes</string>
    <string name="favorites">Favorites</string>
    <string name="vegan">Vegan</string>


    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">FingerFood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="diet_type">Diet Type</string>
    <string name="apply">Apply</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="check_your_connection">Check your connection!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="healthy">Healthy</string>
    <string name="cheap">Cheap</string>
    <string name="description">Description</string>
    <string name="icon_checkbox_circle">Icon Checkbox Circle</string>
    <string name="wifi_connection_icon">Wifi-Connection Icon</string>
    <string name="filter">Filter</string>
    <string name="food_image">Food Image</string>
    <string name="no_favorite_recipes_yet">No favorite recipes yet!</string>
    <string name="empty_list">Empty List</string>
    <string name="save_favorite">Save Favorite</string>
    <string name="ready_in_time">Ready In Time</string>
    <string name="servings">Servings</string>
    <string name="likes">Likes</string>
    <string name="title">Title</string>
    <string name="reminder">Reminder</string>
    <string name="delete">Delete</string>
    <string name="shopping_list">Shopping List</string>
</resources>