<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvMealType"
        style="@style/Widget.FoodyRecipe.TitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/meal_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/mealTypeScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMealType">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/mealTypeChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:checkedChip="@id/main_course_chip"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/main_course_chip"
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_course" />

            <com.google.android.material.chip.Chip
                android:id="@+id/side_dish_chip"
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/side_dish" />

            <com.google.android.material.chip.Chip
                android:id="@+id/dessert_chip"
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dessert" />

            <com.google.android.material.chip.Chip
                android:id="@+id/appetizer_chip"
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appetizer" />

            <com.google.android.material.chip.Chip
                android:id="@+id/salad_chip"
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salad" />

            <com.google.android.material.chip.Chip
                android:id="@+id/bread_chip"
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bread" />

            <com.google.android.material.chip.Chip
                android:id="@+id/breakfast_chip"
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/breakfast" />

            <com.google.android.material.chip.Chip
                android:id="@+id/soup_chip"
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soup" />

            <com.google.android.material.chip.Chip
                android:id="@+id/beverage_chip"
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beverage" />

            <com.google.android.material.chip.Chip
                android:id="@+id/sauce_chip"
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sauce" />

            <com.google.android.material.chip.Chip
                android:id="@+id/marinade_chip"
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marinade" />

            <com.google.android.material.chip.Chip
                android:id="@+id/finger_food_chip"
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fingerfood" />

            <com.google.android.material.chip.Chip
                android:id="@+id/snack_chip"
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/snack" />

            <com.google.android.material.chip.Chip
                android:id="@+id/drink_chip"
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drink" />
        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>


    <TextView
        android:id="@+id/tvDietType"
        style="@style/Widget.FoodyRecipe.TitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/diet_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mealTypeScrollView" />

    <HorizontalScrollView
        android:id="@+id/dietTypeScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/tvDietType">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/dietType_chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:checkedChip="@+id/gluten_free_chip"
            app:selectionRequired="true"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/gluten_free_chip"
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gluten_free" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ketogenic_chip"
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ketogenic" />

            <com.google.android.material.chip.Chip
                android:id="@+id/vegetarian_chip"
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vegetarian" />

            <com.google.android.material.chip.Chip
                android:id="@+id/vegan_chip"
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vegan" />

            <com.google.android.material.chip.Chip
                android:id="@+id/pescetarian_chip"
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pescetarian" />

            <com.google.android.material.chip.Chip
                android:id="@+id/paleo_chip"
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paleo" />

            <com.google.android.material.chip.Chip
                android:id="@+id/primal_chip"
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/primal" />

            <com.google.android.material.chip.Chip
                android:id="@+id/whole30_chip"
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whole30" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <Button
        android:id="@+id/buttonApply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_24dp"
        android:text="@string/apply"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dietTypeScrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>